--- a/MODULO 0/EJERS_ADICIONALES/EJERS_ADICIONALES.ipynb
+++ b/MODULO 0/EJERS_ADICIONALES/EJERS_ADICIONALES.ipynb
@@ -198,10 +198,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d6fa57dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La palabra abecedario no es alfabetica\n"
+     ]
+    }
+   ],
    "source": [
     "palabra = input(\"Introduce una palabra: \")\n",
     "if list(palabra) == sorted(palabra):\n",
@@ -229,17 +237,28 @@
    "execution_count": null,
    "id": "af831198",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "u\n",
+      "e\n",
+      "e\n",
+      "o\n",
+      ".n .j.mpl.\n"
+     ]
+    }
+   ],
    "source": [
     "cadena = input(\"Introduce tu cadena de texto: \")\n",
     "vocales = [\"a\",\"e\",\"i\",\"o\",\"u\",\"A\",\"E\",\"I\",\"O\",\"U\"]\n",
     "\n",
-    "for i in list(cadena):\n",
-    "    if i == vocales.item():\n",
-    "        cadena[i] = \".\"\n",
+    "for i in cadena:\n",
+    "    if (i in vocales):\n",
+    "        cadena = cadena.replace(i,'.')\n",
     "\n",
-    "print(cadena)\n",
-    "# COMPROBAR"
+    "print(cadena)"
    ]
   },
   {
@@ -260,12 +279,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "13f65936",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La letra correspondiente a 659011646 es T\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'T'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dni_sin_letra = input(int(\"Introduce tu dni sin letra: \"))\n",
+    "dni_sin_letra = int(input(\"Introduce tu dni sin letra: \"))\n",
     "\n",
     "letra = {\n",
     "    0: \"T\", 1: \"R\", 2: \"W\", 3: \"A\", 4: \"G\", 5: \"M\", 6: \"Y\", 7: \"F\", 8: \"P\", 9: \"D\", 10: \"X\", 11: \"B\", 12: \"N\", 13: \"J\",\n",
@@ -274,15 +311,14 @@
     "\n",
     "def letra_dni(dni_sin_letra):\n",
     "    total = 0\n",
-    "    for i in dni_sin_letra:\n",
-    "        total =+ i\n",
+    "    for i in str(dni_sin_letra):\n",
+    "        total =+ int(i)\n",
     "\n",
     "    num = total//23 \n",
-    "    print(f\"La letra correspondiente a {dni_sin_letra} es {letra(num)}\")\n",
-    "    return {letra(num)}\n",
+    "    print(f\"La letra correspondiente a {dni_sin_letra} es {letra[num]}\")\n",
+    "    return letra[num]\n",
     "\n",
-    "letra_dni(dni_sin_letra)\n",
-    "# COMPROBAR"
+    "letra_dni(dni_sin_letra)"
    ]
   },
   {
@@ -298,14 +334,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "62db9a83",
    "metadata": {},
    "outputs": [],
    "source": [
     "def es_repeticion():\n",
     "    cadena = input(\"Introduce tu cadena de texto: \")\n",
-    "    return "
+    "    if cadena.split:\n",
+    "        return \n",
+    "    \n",
+    "# POR HACER"
    ]
   },
   {
@@ -317,22 +356,24 @@
     "\n",
     "Ten en cuenta que un año es bisiesto si es divisible por 4 y no divisible por 100, excepto si es también divisible por 400, en cuyo caso es bisiesto.\n",
     "\n",
-    "(Ejemplos: El número de días de 2002 es 365: el número 2002 no es divisible por 4, así que no es bisiesto. El año 2004 es bisiesto y tiene 366 días: el número 2004 es divisible por 4, pero no \n",
+    "(Ejemplos: El número de días de 2002 es 365: el número 2002 no es divisible por 4, así que no es bisiesto. El año 2004 es bisiesto y tiene 366 días: el número 2004 es divisible por 4, \n",
     "\n",
-    "por 100, así que es bisiesto. El año 1900 es divisible por 4, pero no es bisiesto porque es divisible por 100 y no por 400. El año 2000 sí es bisiesto: el número 2000 es divisible por 4 y, \n",
+    "pero no por 100, así que es bisiesto. El año 1900 es divisible por 4, pero no es bisiesto porque es divisible por 100 y no por 400. El año 2000 sí es bisiesto: el número 2000 es divisible por 4 \n",
     "\n",
-    "aunque es divisible por 100, también lo es por 400)."
+    "y, aunque es divisible por 100, también lo es por 400)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "12dc05c5",
    "metadata": {},
    "outputs": [],
    "source": [
     "def año_bisiesto():\n",
-    "    return"
+    "    return\n",
+    "\n",
+    "#POR HACER"
    ]
   },
   {
@@ -355,7 +396,9 @@
    "outputs": [],
    "source": [
     "def prefijo_more_comun():\n",
-    "    return"
+    "    return\n",
+    "\n",
+    "# POR HACER"
    ]
   },
   {
@@ -372,30 +415,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "e0b05745",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La letra correspondiente a 659011646 es T\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dni_sin_letra = int(input(\"Introduce tu dni sin letra: \"))\n",
     "\n",
-    "letra = chr(input(\"Introduce la letra: \"))\n",
-    "\n",
-    "letra = {\n",
-    "    0: \"T\", 1: \"R\", 2: \"W\", 3: \"A\", 4: \"G\", 5: \"M\", 6: \"Y\", 7: \"F\", 8: \"P\", 9: \"D\", 10: \"X\", 11: \"B\", 12: \"N\", 13: \"J\",\n",
-    "    14: \"Z\", 15: \"S\", 16: \"Q\", 17: \"V\", 18: \"H\", 19: \"L\", 20: \"C\", 21: \"K\", 22: \"E\"\n",
-    "}\n",
+    "letra = str(input(\"Introduce la letra: \"))\n",
     "\n",
     "def comprueba_letra_dni(dni_sin_letra, letra):\n",
     "    letra_real = letra_dni(dni_sin_letra)\n",
     "    if letra == letra_real:\n",
     "        return True\n",
-    "    else: \n",
+    "    else:\n",
     "        return False\n",
-    "    \n",
-    "comprueba_letra_dni(dni_sin_letra,letra)\n",
     "\n",
-    "# COMPROBAR"
+    "comprueba_letra_dni(dni_sin_letra,letra)"
    ]
   },
   {
@@ -435,16 +489,60 @@
    "execution_count": null,
    "id": "3de0191b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El ganador es Pere Porcar\n"
+     ]
+    }
+   ],
    "source": [
-    "def fruncion1 (ciclistas, tiempos): # Ganador de la vuelta (las 5 etapas)\n",
-    "    return\n",
+    "ciclistas = [\"Pere Porcar\", \"Joan Beltran\", \"Lledó Fabra\"]\n",
     "\n",
-    "def fruncion2 (ciclistas, tiempos, etapa): # En base a una etapa, devolvemos el nombre del ganador de esa etapa\n",
-    "    return\n",
+    "tiempos = [[10092.0, 12473.1, 13732.3, 10232.1, 10332.3],\n",
     "\n",
-    "def fruncion3 (ciclistas, tiempos): # Ganador de cada etapa\n",
-    "    return"
+    "[11726.2, 11161.2, 12272.1, 11292.0, 12534.0],\n",
+    "\n",
+    "[10193.4, 10292.1, 11712.9, 10133.4, 11632.0]]\n",
+    "\n",
+    "def funcion1 (ciclistas, tiempos): # Ganador de la vuelta (menos tiempo en las 5 etapas)\n",
+    "    total = 0\n",
+    "    tiempo = []\n",
+    "    for i in tiempos:\n",
+    "        for j in i:\n",
+    "            total = total + j\n",
+    "        tiempo.append(total)\n",
+    "    ganador = min(tiempo)\n",
+    "    nombre = tiempo.index(ganador)\n",
+    "    print(f\"El ganador es {ciclistas[nombre]}\")        \n",
+    "    \n",
+    "#funcion1(ciclistas,tiempos)\n",
+    "\n",
+    "def funcion2 (ciclistas, tiempos, etapa): # En base a una etapa, devolvemos el nombre del ganador de esa etapa\n",
+    "    tiempo = []\n",
+    "    for i in tiempos:\n",
+    "        print(i[etapa-1])\n",
+    "        tiempo.append(i)\n",
+    "    ganador = min(tiempo)\n",
+    "    nombre = tiempo.index(ganador)\n",
+    "    print(f\"El ganador de la etapa {etapa} es {ciclistas[nombre]}\") \n",
+    "\n",
+    "#funcion2(ciclistas,tiempos,etapa=1)\n",
+    "\n",
+    "\n",
+    "def funcion3 (ciclistas, tiempos): # Ganador de cada etapa\n",
+    "    for x in range(5):\n",
+    "        tiempo=[]\n",
+    "        for y in range(3):\n",
+    "            tiempo.append(tiempos[y][x])\n",
+    "        #print(tiempo)\n",
+    "        ganador = min(tiempo)\n",
+    "        nombre = tiempo.index(ganador)\n",
+    "        print(f\"El ganador de la etapa {x+1} es {ciclistas[nombre]}\") \n",
+    "            \n",
+    "#funcion3(ciclistas,tiempos)\n"
    ]
   },
   {
@@ -463,7 +561,9 @@
    "outputs": [],
    "source": [
     "def primos():\n",
-    "    return"
+    "    return\n",
+    "\n",
+    "# POR HACER"
    ]
   }
  ],
